--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,8 @@ pool:
 
 steps:
 - task: Maven@3
+  variables:
+  - group: Anypoint Platform Sandbox Variables
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
