--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,4 +34,4 @@ stages:
           jdkArchitectureOption: 'x64'
           publishJUnitResults: true
           testResultsFiles: '**/surefire-reports/TEST-*.xml'
-          goals: 'package'
+          goals: 'clean deploy'
