--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,13 +59,13 @@ stages:
           options: >-
             -s $(Agent.TempDirectory)/settings.xml 
             -DmuleDeploy 
-            -DskipMunitTests 
-            -Denvironment=$(environment)
+            -DskipMunitTests             
             -DbusinessGroupId=a9641300-dc38-4f3f-a0be-162490c33ec5 
             -Dreplica=1 
             -DvCores=0.1
-            -Dsecret=$(secret)
-            -Drandom=$(random)
+            "-Denvironment=$(environment)"
+            "-Dsecret=$(secret)"
+            "-Drandom=$(random)"
           javaHomeOption: 'JDKVersion'
           jdkVersionOption: '1.11'
           jdkArchitectureOption: 'x64'
